--- a/Frontend/index.html
+++ b/Frontend/index.html
@@ -5,9 +5,16 @@
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <meta http-equiv="X-UA-Compatible" content="ie=edge">
   <title>Document</title>
-  <script src="./src/index.js"></script>
+
 </head>
 <body>
+  <header>
+      <h2>Dog Instagram</h2>
+    </header>
 
+    <main class="main">
+      <!-- Add our Dogs -->
+    </main>
+  <script src="./src/index.js"></script>
 </body>
 </html>
